# AionCore

./: AGENTS.md  CHANGELOG.md  Cargo.toml  FRONTEND_INTEGRATION.md  justfile
.github/workflows/: ci.yml  release.yml
crates/aionui-ai-agent/src/: acp_agent.rs  agent_task.rs  aionrs_agent.rs  factory.rs  lib.rs  middleware.rs  registry.rs  runtime_status.rs  skill_manager.rs  types.rs
crates/aionui-ai-agent/tests/: acp_agent_integration.rs  agent_types_integration.rs  factory_provider_integration.rs  (+1 more)
crates/aionui-api-types/: Cargo.toml
crates/aionui-app/: Cargo.toml
crates/aionui-auth/: Cargo.toml
crates/aionui-auth/src/: extract.rs  lib.rs  middleware.rs  routes.rs  validation.rs
crates/aionui-auth/tests/: middleware_tests.rs  route_tests.rs  workbench_route_tests.rs
crates/aionui-channel/: Cargo.toml
crates/aionui-conversation/: Cargo.toml
crates/aionui-db/: Cargo.toml
crates/aionui-db/migrations/: 20260412000001_create_users_table.sql
crates/aionui-db/pg_migrations/: 001_workbench_schema.sql  002_audit_logs_actor_on_delete_set_null.sql
crates/aionui-db/src/: database.rs  error.rs  lib.rs
crates/aionui-db/src/models/: mod.rs  workbench.rs
crates/aionui-db/src/repository/: conversation.rs  mod.rs  pg_workbench.rs  sqlite_agent_metadata.rs  sqlite_conversation.rs  sqlite_user.rs  user.rs  workbench.rs
crates/aionui-db/tests/: conversation_repository.rs  db_lifecycle.rs  user_repository.rs
crates/aionui-extension/: Cargo.toml
crates/aionui-system/: Cargo.toml
docs/api-spec/: 00-module-index.md  06-ai-agent.md  15-pet.md
(+190 files in other folders)
